--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.8)
 #C++ related options
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CONFIGURATION_TYPES "Debug" "Release" "Dist" "Profile")
+set(CMAKE_CONFIGURATION_TYPES "Debug" "Release" "Ship" "Profile")
 
 
 #Include directories which should be available for any project
@@ -19,11 +19,18 @@ set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake")
 
 add_compile_definitions($<$<CONFIG:Debug>:UTD_ASSERTS_ENABLE>)
 add_compile_definitions($<$<CONFIG:Debug>:UTD_CONFIG_DEBUG>)
+
+add_compile_definitions($<$<CONFIG:Ship>:UTD_CONFIG_SHIP>)
+add_compile_definitions($<$<CONFIG:Ship>:NDEBUG>)
+
+add_compile_definitions($<$<CONFIG:Release>:UTD_CONFIG_RELEASE>)
+
 add_compile_definitions($<$<OR:$<CONFIG:Release>,$<CONFIG:Profile>>:UTD_PROFILING_ENABLE>)
-# add_compile_definitions($<$<CONFIG:Distrib>:UTD_DISTRIBUTE>)
+add_compile_definitions($<$<OR:$<CONFIG:Release>,$<CONFIG:Debug>>:UTD_LOGGING_ENABLE>)
+
 # add_compile_definitions($<$<CONFIG:Profile>>:UTD_PROFILING_ENABLE>)
 
-#Cmake modules
+# CMake modules
 include(cmake/make_groups.cmake)
 include(cmake/project_configuration.cmake)
 
