initial tracy profiler integration     * defined profiling macroses such as:         UTD_LINE         UTD_FILE         UTD_FUNCTION         UTD_PROFILE_SCOPE         UTD_PROFILE_FUNC         UTD_PROFILE_BEGIN         UTD_PROFILE_END         UTD_CONCAT     * added profiler::color enum     * added the ability to use macroses with more       than one parameter     * added profiler_integration.cmake file     * refactor a little

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.8)
 
+#options
+option(USE_TRACY_PROFILER "Whether to use Tracy Profiler" ON)
+
 #C++ related options
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CONFIGURATION_TYPES "Debug" "Release" "Ship" "Profile")
-
 
 #Include directories which should be available for any project
 include_directories(Engine/src)
@@ -25,14 +27,27 @@ add_compile_definitions($<$<CONFIG:Ship>:NDEBUG>)
 
 add_compile_definitions($<$<CONFIG:Release>:UTD_CONFIG_RELEASE>)
 
-add_compile_definitions($<$<OR:$<CONFIG:Release>,$<CONFIG:Profile>>:UTD_PROFILING_ENABLE>)
+add_compile_definitions($<$<CONFIG:Profile>:UTD_PROFILING_ENABLE>)
 add_compile_definitions($<$<OR:$<CONFIG:Release>,$<CONFIG:Debug>>:UTD_LOGGING_ENABLE>)
+
+if(MSVC)
+    add_compile_definitions(UTD_MSVC)
+endif()
 
 # add_compile_definitions($<$<CONFIG:Profile>>:UTD_PROFILING_ENABLE>)
 
 # CMake modules
+include(FetchContent)
 include(cmake/make_groups.cmake)
 include(cmake/project_configuration.cmake)
+include(cmake/profiler_integration.cmake)
+
+# Fetching and adding content or tools 
+INTEGRATE_TRACY_PROFILER(ON)
+
+if(TRACY_ENABLE AND OPTICK_ENABLED)
+    message(SEND_ERROR "You can NOT integrate two or more profiler tools at once")
+endif()
 
 add_subdirectory(Engine)
 add_subdirectory(Untile)
@@ -40,3 +55,4 @@ add_subdirectory(Untile)
 if(MSVC)
     set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Untile)
 endif()
+
