--- a/Untile/CMakeLists.txt
+++ b/Untile/CMakeLists.txt
@@ -15,8 +15,7 @@ set_target_properties(Untile
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin/Untile
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin/Untile
     )
-
-
+set_property(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} PROPERTY VS_STARTUP_PROJECT Untile)
 
 make_groups(Untile "Untile")
 
