Implemented Renderer for 2D     * improved quality and configuration speed for       Project's CMake     * Added uniform_buffer class     * changed class interface for renderer     * Added the ability to bind slots for textures     * Fixed issues with build-system     * added some mess to the project :|

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,16 +19,16 @@ project(Untiled)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake")
 
-add_compile_definitions($<$<CONFIG:Debug>:UTD_ASSERTS_ENABLE>)
-add_compile_definitions($<$<CONFIG:Debug>:UTD_CONFIG_DEBUG>)
+# add_compile_definitions($<$<CONFIG:Debug>:UTD_ASSERTS_ENABLE>)
+# add_compile_definitions($<$<CONFIG:Debug>:UTD_CONFIG_DEBUG>)
 
-add_compile_definitions($<$<CONFIG:Ship>:UTD_CONFIG_SHIP>)
-add_compile_definitions($<$<CONFIG:Ship>:NDEBUG>)
+# add_compile_definitions($<$<CONFIG:Ship>:UTD_CONFIG_SHIP>)
+# add_compile_definitions($<$<CONFIG:Ship>:NDEBUG>)
 
-add_compile_definitions($<$<CONFIG:Release>:UTD_CONFIG_RELEASE>)
+# add_compile_definitions($<$<CONFIG:Release>:UTD_CONFIG_RELEASE>)
 
-add_compile_definitions($<$<CONFIG:Profile>:UTD_PROFILING_ENABLE>)
-add_compile_definitions($<$<OR:$<CONFIG:Release>,$<CONFIG:Debug>>:UTD_LOGGING_ENABLE>)
+# add_compile_definitions($<$<CONFIG:Profile>:UTD_PROFILING_ENABLE>)
+# add_compile_definitions($<$<OR:$<CONFIG:Release>,$<CONFIG:Debug>>:UTD_LOGGING_ENABLE>)
 
 # add_compile_definitions($<$<CONFIG:Profile>>:UTD_PROFILING_ENABLE>)
 
@@ -45,15 +45,11 @@ if(TRACY_ENABLE AND OPTICK_ENABLED)
     message(SEND_ERROR "You can NOT integrate two or more profiler tools at once")
 endif()
 
-add_subdirectory(Engine)
-add_subdirectory(Untile)
-
 if(MSVC)
-    add_compile_definitions(UTD_MSVC)
     set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Untile)
 endif()
 
-if(WIN32)
-    add_compile_definitions(UTD_WINDOWS)
-endif()
+add_subdirectory(Engine)
+add_subdirectory(Untile)
+
 
