Major changes #1(ResManager, Editor, Images etc.)     * Expanded codebase with resource_manager     * added circle rendering functionality     * renderer2D's code refactor     * added "image" resource type     * provided with forward declarations header to       reduce dependecies within the engine     * added buffer class(to be improved in future)     * added initial I/O common system files     * initial common filesystem functionality     * revised gl_texture, gl_shader classes     * new Digital Information literals(temp?)     * changed typedefs in base.h     * INTRODUCED THE ENGINE EDITOR TOOL     * set Editor project as a default for IDE VS     * a bit of refactor in general

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bin-int/
 build/
 .vscode/
 _references/
+assets/
 
 # Ignore CLion project directory and iml files
 .idea/
@@ -19,3 +20,4 @@ _references/
 **.vcxproj.filters
 **.vcxproj.user
 **.csproj
+
