added Sandbox project & 'framebuffer' abstraction  * changed event::static_type ret value to    constexpr

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ assets/
 **.vcxproj.user
 **.csproj
 
+# my notes about code changes for better version controll tracking
+# also a temporary solution
+.commit.txt 
